src/objects/Searches__c.object
<CustomObject>
    <description>Used track the property and hotel searches conducted as part of the Sevice Request</description>
    <fields>
        <fullName>Active_NTV_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active NTV Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Administration_Fee__c</fullName>
        <label>Administration Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amenity_Fee__c</fullName>
        <label>Amenity Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appliance_Hook_Up_Gas_Electric__c</fullName>
        <label>Appliance Hook-up Gas/Electric</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_CRS_Needs_To_Provide__c</fullName>
        <label>Appliances CRS needs to provide</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_Present_In_Rental_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliances present in rental property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <label>Application Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_Lease_Fee__c</fullName>
        <label>Break Lease Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certificate_Of_Occupancy_Fee__c</fullName>
        <label>Certificate of Occupancy Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certificate_Of_Occupancy_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Occupancy Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleaning_Fee__c</fullName>
        <label>Cleaning Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_To_Send_NTV__c</fullName>
        <formula>Placement__r.Approved_Through_Date__c -  Days_Notice_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date To Send NTV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Notice_Required_After_ILT__c</fullName>
        <label>Days Notice Required after ILT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Notice_Required__c</fullName>
        <label>Days Notice Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Page_Sufficient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will Declaration Page be sufficient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_from_Damaged_Property__c</fullName>
        <inlineHelpText>The number of miles from the damaged property</inlineHelpText>
        <label>Distance from Damaged Property</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elevator_Reservation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevator Reservation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Extension_Increment_Days__c</fullName>
        <label>Extension Increment Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fenced_Yard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fenced Yard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fencing_Fee__c</fullName>
        <label>Fencing Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Available_Move_In_Date__c</fullName>
        <label>First Available Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Month_Pro_Rated_Rent_Amount_Due__c</fullName>
        <label>1st Month Prorated Rent Amount Due</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if a foreclosure check was performed.</inlineHelpText>
        <label>Foreclosure Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_Option__c</fullName>
        <label>Furniture Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>CRS Package</fullName>
                </value>
                <value>
                    <fullName>Furniture Only</fullName>
                </value>
                <value>
                    <fullName>Unfurnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Garage_Remote_Fee__c</fullName>
        <label>Garage Remote Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Payable_Landlord_Cost__c</fullName>
        <label>Has Payable Landlord Cost</label>
        <summaryFilterItems>
            <field>Costs__c.Payable_Party_Is_Landlord_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Policyholder_Abatement__c</fullName>
        <label>Has Policyholder Abatement</label>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>PH Abatement</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Policyholder_Rent__c</fullName>
        <label>Has Policyholder Rent</label>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Policyholder Rent</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Rent__c</fullName>
        <label>Has Rent</label>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Rent</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Utilities__c</fullName>
        <label>Has Utilities</label>
        <summaryFilterItems>
            <field>Costs__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Utilities</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Search Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Phone__c</fullName>
        <formula>Hotel__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Hotel Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Hotel Accounts</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Searches</relationshipLabel>
        <relationshipName>Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Utilities_Are_To_Be_Established__c</fullName>
        <label>How utilities are to be established</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Account Setup</fullName>
                </value>
                <value>
                    <fullName>Transfer Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Check_Delivery_Method__c</fullName>
        <label>Initial Check Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>ACH Debit Block</fullName>
                </value>
                <value>
                    <fullName>FedEx 2-Day</fullName>
                </value>
                <value>
                    <fullName>FedEx Morning</fullName>
                </value>
                <value>
                    <fullName>FedEx Saturday</fullName>
                </value>
                <value>
                    <fullName>FedEx Standard</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Quick Pay</fullName>
                </value>
                <value>
                    <fullName>US Mail</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Contact_Name__c</fullName>
        <label>Initial Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Number__c</fullName>
        <label>Initial Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_Type__c</fullName>
        <label>Initial Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>ACH Debit Block</fullName>
                </value>
                <value>
                    <fullName>Cashiers Check</fullName>
                </value>
                <value>
                    <fullName>Company Check</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Quick Pay</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landlord_Status__c</fullName>
        <formula>TEXT( Landlord__r.Status__c )</formula>
        <label>Landlord Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Landlord</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Landlord</value>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Searches</relationshipLabel>
        <relationshipName>Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landscaping_Snow_Removal_HOA_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landscaping/ Snow Removal/ HOA included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Approved_By_Adjuster__c</fullName>
        <label>Lease Term Approved by ADJ</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NTV_Send_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the contact to send the Notice to Vacate to.  Defaults to the Landlord but can be overridden</description>
        <label>NTV Send To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Landlord, Agent, Broker</value>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Searches (NTV Send To)</relationshipLabel>
        <relationshipName>Searches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NTV_Send_Via__c</fullName>
        <label>NTV Send Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Certified Mail</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Complex__c</fullName>
        <label>Name of Complex</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Pets_Allowed__c</fullName>
        <label>Number of Pets allowed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Selected_Date__c</fullName>
        <label>Original Selected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Non_Refundable_Fee__c</fullName>
        <label>Other Non-Refundable Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_5_Mile_Reason__c</fullName>
        <label>Over 5 mi reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH_Abatement_Amount__c</fullName>
        <label>PH Abatement Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PH_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PH Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking_Fee__c</fullName>
        <label>Parking Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pet_RSD__c</fullName>
        <label>Pet RSD</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pets_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pets Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number_To_Confirm_Vendor_Entry__c</fullName>
        <label>Phone Number to confirm Vendor Entry</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pictures_Allowed_On_Walls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pictures allowed on walls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipName>Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policyholder_Accepted_Property_Date__c</fullName>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policyholder_Declined_Property_Date__c</fullName>
        <label>Declined Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policyholder_Declined_Property_Reason__c</fullName>
        <label>Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presented_Date__c</fullName>
        <label>Presented Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Presented_to_Adjuster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presented to Adjuster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Time_For_Application__c</fullName>
        <label>Processing time for Application</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Description__c</fullName>
        <label>Property Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Commercial Property</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>Insurance Corporate Housing</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Senior Facility</fullName>
                </value>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
                <value>
                    <fullName>Townhome</fullName>
                </value>
                <value>
                    <fullName>Travel Trailer</fullName>
                </value>
                <value>
                    <fullName>Vacation Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the property created for this search.</inlineHelpText>
        <label>Property</label>
        <referenceTo>Properties__c</referenceTo>
        <relationshipName>R00NR0000000VQ9GMAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RM Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <label>RSD</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Re_Keying_Fee__c</fullName>
        <label>Re-Keying Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment_Type__c</fullName>
        <label>Recurring Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>ACH Debit Block</fullName>
                </value>
                <value>
                    <fullName>Cashiers Check</fullName>
                </value>
                <value>
                    <fullName>Company Check</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Quick Pay</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Costs__c</fullName>
        <label>Rent Costs</label>
        <summarizedField>Costs__c.Monthly_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Rent</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rent_Frequency__c</fullName>
        <label>Rent Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Increase_After_ILT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rent Increase after ILT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rent_Increase_To_After_ILT__c</fullName>
        <label>What will rent increase to after ILT</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Application_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental Application Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renters_Insurance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renters Insurance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requirements_For_Qualification__c</fullName>
        <label>Requirements for Qualification</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_For_RSD__c</fullName>
        <label>Responsible Party for RSD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Party_For_Vendor_Entry__c</fullName>
        <label>Responsible Party for Vendor Entry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <summarizedField>Costs__c.Monthly_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Security Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Costs__c.Searches__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Copy_of_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Copy of Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Copy_of_Tracking_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Copy of Tracking Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipName>Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <label>Square Feet</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_For_PH_Abatement__c</fullName>
        <label>Start Date for PH Abatement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_ID__c</fullName>
        <inlineHelpText>Enter 2-character  capital state abbreviation.</inlineHelpText>
        <label>State ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Enter 2-character  capital state abbreviation.</inlineHelpText>
        <label>State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(  $RecordType.DeveloperName = &quot;Hotel&quot;, &quot;Check Capacity&quot;,IF(ISPICKVAL(Property__r.Status__c , &quot;Occupied&quot;) , &quot;Not Available&quot;, &quot;Available&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Addr1__c</fullName>
        <label>Street Addr1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Addr2__c</fullName>
        <label>Street Addr2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sure_Deposit__c</fullName>
        <label>Sure Deposit</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>THC_Comments__c</fullName>
        <label>THC Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>